--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Bedrock Playsound 리스트</title>
+<title>Bedrock Playsound 리스크</title>
 <style>
   body{font-family:system-ui,Segoe UI,Apple SD Gothic Neo,sans-serif;margin:16px;background:#f5f5f5;color:#222}
   h1{font-size:20px;margin:0 0 8px}
